[package]
name = "mb_controller"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2018"
resolver = "2"

[dependencies]
ink_primitives = { version = "3.0.0-rc5", path = "../ink/crates/primitives", default-features = false }
ink_metadata = { version = "3.0.0-rc5", path = "../ink/crates/metadata", default-features = false, features = ["derive"], optional = true }
ink_env = { version = "3.0.0-rc5", path = "../ink/crates/env", default-features = false }
ink_prelude = { version = "3.0.0-rc5", path = "../ink/crates/prelude", default-features = false }
ink_storage = { version = "3.0.0-rc5", path = "../ink/crates/storage", default-features = false }
ink_lang = { version = "3.0.0-rc5", path = "../ink/crates/lang", default-features = false }

scale = { package = "parity-scale-codec", version = "2.1", default-features = false, features = ["derive"] }
scale-info = { version = "1.0.0", default-features = false, features = ["derive"], optional = true }
mb_projects = { version = "0.1.0", path = "../MBProjects", default-features = false, features = ["ink-as-dependency"] }
mbdirectory = { version = "0.1.0", path = "../mbdirectory", default-features = false, features = ["ink-as-dependency"] }
mb_fundingcyclestore = { version = "0.1.0", path = "../MBFundingCycleStore", default-features = false, features = ["ink-as-dependency"] }
mbtokenstore = { version = "0.1.0", path = "../mbtokenstore", default-features = false, features = ["ink-as-dependency"] }
[lib]
name = "mb_controller"
path = "lib.rs"
crate-type = [
	# Used for normal contract Wasm blobs.
	"cdylib",
    "rlib",
]

[features]
default = ["std"]
std = [
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_primitives/std",
    "ink_prelude/std",
    "scale/std",
    "scale-info/std",
    "mb_projects/std",
    "mbdirectory/std",
    "mbtokenstore/std",
    "mb_fundingcyclestore/std"
]
ink-as-dependency = []
[profile.release]
overflow-checks = false
